--- a/app/packs/stylesheets/partials/_footer.scss
+++ b/app/packs/stylesheets/partials/_footer.scss
@@ -12,7 +12,15 @@ footer .main-footer, .main-footer__top, .main-footer__down, footer .mini-footer 
 .main-footer__middle {
     color: var(--secondary-color) !important;
 }
-
+#trigger-dropdown-language-chooser  {
+    background-color: var(--secondary-color) !important;
+}
 .middle-footer-text{
     inline-size: 600px;
+}
+
+@media (max-width: 768px) {
+    .middle-footer-text{
+        inline-size: 300px;
+    } 
 }
