--- a/app/views/layouts/decidim/footer/_middle_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_middle_footer.html.erb
@@ -9,11 +9,11 @@
         </div>
     </div>
 
-    <div class="flex justify-center flex-col items-center border-t mx-auto mb-8">
-        <div class="middle-footer-text text-center mt-8">
+    <div class="border-t mx-auto mb-8">
+        <div class="middle-footer-text text-center mt-8 mx-auto">
             <%= t("text_collaborate_eu_html", scope: "colab.footer") %>   
         </div>
-        <div class="flex w-1/6 justify-center mt-8">
+        <div class="flex h-8 justify-center mt-8">
             <%= image_pack_tag("media/images/ue_logo.png") %>
         </div>
     </div>
