--- a/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
@@ -1,20 +1,12 @@
-<div class="main-footer__middle text-sm container border-t mt-4">
+<div class="main-footer__middle text-sm container mt-4">
     <div class="mx-auto mb-8">
-        <div class="text-center mt-8">
-            <%= t("text_whom_collaborate", scope: "colab.footer") %>
+        <div class="text-center color-black font-bold mt-8">
+            <%= t("text", scope: "noesfeinadedones.footer") %>
         </div>
-        <div class="flex h-8 justify-evenly gap-4 mt-8">
-            <%= image_pack_tag("media/images/generalitat.png") %>
+        <div class="flex h-8 justify-evenly gap-2 mt-8">
+            <%= image_pack_tag("media/images/telecos.png") %>
             <%= image_pack_tag("media/images/logo_i2cat.png") %>
-        </div>
-    </div>
-
-    <div class="mx-auto mb-8">
-        <div class="middle-footer-text text-center mt-8 mx-auto">
-            <%= t("text_collaborate_eu_html", scope: "colab.footer") %>
-        </div>
-        <div class="flex h-8 justify-center mt-8">
-            <%= image_pack_tag("media/images/ue_logo.png") %>
+            <%= image_pack_tag("media/images/generalitat.png") %>
         </div>
     </div>
 </div>
