change footer links

--- a/app/packs/stylesheets/partials/_footer.scss
+++ b/app/packs/stylesheets/partials/_footer.scss
@@ -6,6 +6,12 @@ footer {
   .mini-footer, .mini-footer__content {
     @apply bg-white text-black;
   }
+  
+  .main-footer__middle {
+    a {
+      width: 200px;
+    }
+  }
 
   .footer-logos {
     @apply block;
