--- a/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="main-footer__middle text-sm container mt-4">
     <div class="mx-auto mb-8">
-        <div class="text-center color-black font-bold mt-8">
+        <div class="text-center text-balance color-black font-bold mt-8">
             <%= t("text", scope: "noesfeinadedones.footer") %>
         </div>
         <div class="flex flex-col md:flex-row md:justify-evenly items-center justify-center gap-4 mt-8">
