--- a/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
@@ -1,20 +1,29 @@
-<div class="main-footer__middle text-sm container border-t mt-4">
+<div class="main-footer__middle text-sm container mt-4">
     <div class="mx-auto mb-8">
-        <div class="text-center mt-8">
-            <%= t("text_whom_collaborate", scope: "colab.footer") %>
+        <div class="text-center text-balance color-black font-bold mt-8">
+            <%= t("text", scope: "noesfeinadedones.footer") %>
         </div>
-        <div class="flex h-8 justify-evenly gap-4 mt-8">
-            <%= image_pack_tag("media/images/generalitat.png") %>
-            <%= image_pack_tag("media/images/logo_i2cat.png") %>
-        </div>
-    </div>
+        <div class="flex flex-col md:flex-row md:justify-evenly items-center justify-center gap-4 mt-8">
+          <%= link_to "https://next-generation-eu.europa.eu", class: "h-fit" do %>
+            <%= image_pack_tag("media/images/nextgeneration.png", width: "200px", alt: t("nextgeneration", scope: "noesfeinadedones.footer"), class: "h-fit")%>
+          <% end %>
 
-    <div class="mx-auto mb-8">
-        <div class="middle-footer-text text-center mt-8 mx-auto">
-            <%= t("text_collaborate_eu_html", scope: "colab.footer") %>
-        </div>
-        <div class="flex h-8 justify-center mt-8">
-            <%= image_pack_tag("media/images/ue_logo.png") %>
+          <%= link_to "https://fonseuropeus.gencat.cat/ca/next-generation-catalunya/index.html", class: "h-fit" do %>
+            <%= image_pack_tag("media/images/accio-next-generation-catalunya.jpg", width: "200px", alt: t("nextgeneration-catalunya", scope: "noesfeinadedones.footer"), class: "h-fit")%>
+          <% end %>
+
+          <%= link_to "https://web.gencat.cat", class: "h-fit"  do %>
+            <%= image_pack_tag("media/images/generalitat.png", width: "200px", alt: t("generalitat", scope: "noesfeinadedones.footer"), class: "h-fit")  %>
+          <% end %>
+
+          <%= link_to "https://i2cat.net/", class: "h-fit"  do %>
+            <%= image_pack_tag("media/images/logo_i2cat.png", width: "200px", alt: t("i2cat", scope: "noesfeinadedones.footer"), class: "h-fit")  %>
+          <% end %>
+
+          <%= link_to "https://www.telecos.cat", class: "h-fit" do %>
+            <%= image_pack_tag("media/images/telecos.png", width: "200px", alt: t("telecos", scope: "noesfeinadedones.footer"), class: "h-fit") %>
+          <% end %>
+
         </div>
     </div>
 </div>
