--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -11,6 +11,7 @@
 @import "../partials/homepage";
 @import "../partials/footer";
 
+/**
 :root{
   --primary-color: #0184c0;
   --secondary-color: #140676;
@@ -23,6 +24,7 @@
   --pantone-2577C: #9275b3;
   --pantone-663C: #f0efea;
 }
+*/
 
 .main-bar__links-desktop {
   @media (min-width: 768px){
