--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -8,6 +8,7 @@
 // By default this is empty.
 
 @import "../partials/fonts";
+@import "../partials/buttons";
 @import "../partials/homepage";
 @import "../partials/footer";
 
