--- a/app/packs/stylesheets/partials/_homepage.scss
+++ b/app/packs/stylesheets/partials/_homepage.scss
@@ -1,17 +1,8 @@
 .home__menu {
-    background-color: var(--secondary-color);
+  background-color: white;
 }
-
-a#hero-cta {
-    background-color: var(--tertiary-color);
-}
-
-a#hero-cta:hover, #sub_hero a {
-    background-color: var(--primary-color);
-}
-
-#sub_hero a {
-    background-color: var(--success-color);
+.home__menu-element--link {
+  color: black;
 }
 
 #html-block-html {
