--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -7,6 +7,7 @@
 //
 // By default this is empty.
 
+@import "../partials/header";
 @import "../partials/fonts";
 @import "../partials/buttons";
 @import "../partials/homepage";
