--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -7,6 +7,7 @@
 //
 // By default this is empty.
 
+@import "../partials/header";
 @import "../partials/fonts";
 @import "../partials/buttons";
 @import "../partials/homepage";
@@ -51,5 +52,28 @@
         }
       }
     }
+  }
+
+  &__item {
+    span {
+      @apply whitespace-nowrap;
+    }
+  }
+}
+
+#form-search_topbar {
+  background-color: transparent;
+  
+  input {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  button {
+    opacity: 1 !important;
+  }
+  
+  &.search-active input {
+    opacity: 1;
   }
 }
