--- a/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
@@ -1,5 +1,9 @@
 <div class="main-footer__middle text-sm container mt-4">
     <div class="mx-auto mb-8">
+        <div class="text-center text-balance color-black font-bold mt-8">
+            <%= t("text", scope: "noesfeinadedones.footer") %>
+        </div>
+
         <div class="flex flex-col md:flex-row md:justify-evenly items-center justify-center gap-4 mt-8">
           <%= link_to "https://next-generation-eu.europa.eu", class: "h-fit" do %>
             <%= image_pack_tag("media/images/nextgeneration.png", width: "200px", alt: t("nextgeneration", scope: "noesfeinadedones.footer"), class: "h-fit")%>
@@ -9,8 +13,8 @@
             <%= image_pack_tag("media/images/accio-next-generation-catalunya.jpg", width: "200px", alt: t("nextgeneration-catalunya", scope: "noesfeinadedones.footer"), class: "h-fit")%>
           <% end %>
 
-          <%= link_to "https://web.gencat.cat", class: "h-fit"  do %>
-            <%= image_pack_tag("media/images/generalitat.png", width: "200px", alt: t("generalitat", scope: "noesfeinadedones.footer"), class: "h-fit")  %>
+          <%= link_to "https://empresa.gencat.cat", class: "h-fit"  do %>
+            <%= image_pack_tag("media/images/empresa.jpg", width: "200px", alt: t("generalitat_empresa_i_treball", scope: "noesfeinadedones.footer"), class: "h-fit")  %>
           <% end %>
 
           <%= link_to "https://i2cat.net/", class: "h-fit"  do %>
@@ -20,9 +24,6 @@
           <%= link_to "https://www.telecos.cat", class: "h-fit" do %>
             <%= image_pack_tag("media/images/telecos.png", width: "200px", alt: t("telecos", scope: "noesfeinadedones.footer"), class: "h-fit") %>
           <% end %>
-        </div>
-        <div class="text-center text-balance color-black font-bold mt-8">
-            <%= t("text", scope: "noesfeinadedones.footer") %>
         </div>
     </div>
 </div>
