add pla_recuperacio to footer

--- a/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
+++ b/app/views/layouts/decidim/footer/_sponsors_footer.html.erb
@@ -9,6 +9,10 @@
             <%= image_pack_tag("media/images/nextgeneration.png", width: "200px", alt: t("nextgeneration", scope: "noesfeinadedones.footer"), class: "h-fit")%>
           <% end %>
 
+          <%= link_to "https://planderecuperacion.gob.es", class: "h-fit" do %>
+            <%= image_pack_tag("media/images/pla_recuperacio.png", width: "200px", alt: t("pla-recuperacio", scope: "noesfeinadedones.footer"), class: "h-fit")%>
+          <% end %>
+
           <%= link_to "https://fonseuropeus.gencat.cat/ca/next-generation-catalunya/index.html", class: "h-fit" do %>
             <%= image_pack_tag("media/images/accio-next-generation-catalunya.jpg", width: "200px", alt: t("nextgeneration-catalunya", scope: "noesfeinadedones.footer"), class: "h-fit")%>
           <% end %>
